<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_sign_in"
    style="@style/MatchParent"
    android:background="@color/background_app_color"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <EditText
        android:id="@+id/login_in_edittext"
        style="@style/MatchWidth"
        android:hint="@string/username"
        android:singleLine="true"
        android:textColor="@color/black_light"
        android:textColorHint="@color/warm_gray_two"
        android:textSize="@dimen/text_size_large"
        android:theme="@style/EditTextTheme" />

    <EditText
        android:id="@+id/password_in_edittext"
        style="@style/MatchWidth"
        android:layout_marginTop="@dimen/margin_middle"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/black_light"
        android:textColorHint="@color/warm_gray_two"
        android:textSize="@dimen/text_size_large"
        android:theme="@style/EditTextTheme" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="signIn"
        android:text="@string/sign_in" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="signUp"
        android:text="@string/sign_up" />

    <ProgressBar
        android:id="@+id/sign_in_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center" />

</LinearLayout>